# ChineseChess

./: CMakeLists.txt  ChineseChess.pro  Game.qml  Help.qml  Helppage.qml  Local.qml  Localpage.qml  Mainpage.qml  Online.qml  Onlinepage.qml  Setting.qml  Settingpage.qml  connect.cpp  connect.h  localplay.cpp  localplay.h  main.cpp  main.qml  qml.qrc  resource.qrc  resources.qrc  server.cpp  server.h
qml/: Main.qml
qml/common/: DialogBase.qml  SceneBase.qml
qml/dialogs/: CueRoundDialog.qml  DialogBase.qml  GameAgainDialog.qml  GameOverDialog.qml  SystemDialog.qml
qml/entity/: Board.qml  Clock.qml  Stone.qml
qml/scenes/: CreateRoomScene.qml  GameScene.qml  HelpScene.qml  JoinRoomScene.qml  LocalScene.qml  MenuScene.qml  SettingScene.qml  SoloScene.qml
开发文档/: 中国象棋用户使用文档.docx  中国象棋项目开发说明文档.docx
